--- a/organizingcommittee.html
+++ b/organizingcommittee.html
@@ -2053,7 +2053,7 @@
                                                                 href="https://www-users.cse.umn.edu/~shekhar/"
                                                                 target="_blank">Shashi Shekhar</h4>
                                                         <div>
-                                                            <p>U. of Minnesota</p></a>
+                                                            <p>University of Minnesota</p></a>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -2186,7 +2186,7 @@
                                                                 Ding</h4>
 
 
-                                                        <p>U. of Massachusetts Boston</p></a>
+                                                        <p>University of Massachusetts Boston</p></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2297,7 +2297,7 @@
                                                     <div class="et_pb_team_member_description">
                                                         <h4 class="et_pb_module_header"><a
                                                                 href="https://imczq.com/" target="_blank">Chen, ZhiQian</h4>
-                                                        <p>Mississippi State Univ.</p></a>
+                                                        <p>Mississippi State University</p></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -2453,7 +2453,7 @@
                                                                 Jiang</h4>
 
                                                         <div>
-                                                            <p>U. of Florida</p>
+                                                            <p>University of Florida</p>
                                                         </div></a>
 
                                                     </div>
@@ -2661,7 +2661,7 @@
                                                                 target="_blank">Yiqun Xie</h4>
 
                                                         <div>
-                                                            <p>U. of Maryland</p>
+                                                            <p>University of Maryland</p>
                                                         </div></a>
 
                                                     </div>
@@ -2756,7 +2756,7 @@
                                                         <h4 class="et_pb_module_header"><a href="https://cs.emory.edu/~lzhao41/"
                                                                 target="_blank">Liang Zhao</h4>
                                                         <div>
-                                                            <p>Emory U.</p>
+                                                            <p>Emory University</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
@@ -2822,7 +2822,7 @@
                                                                 href="https://www.pourkamali.com/"
                                                                 target="_blank">Farhad Pourkamali</h4>
                                                         <div>
-                                                            <p>U. of Colorado Denver</p>
+                                                            <p>University of Colorado Denver</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
@@ -2936,7 +2936,7 @@
                                                                 Silva</h4>
 
                                                         <div>
-                                                            <p>Rice U.</p>
+                                                            <p>Rice University</p>
                                                         </div></a>
 
                                                     </div>
@@ -3185,7 +3185,7 @@
                                                                 target="_blank">Meikang Qiu</h4>
 
                                                         <div>
-                                                            <p>Augusta U.</p>
+                                                            <p>Augusta University</p>
                                                         </div></a>
 
                                                     </div>
@@ -3575,7 +3575,7 @@
                                                                 href="https://taoranj.github.io/" target="_blank">Taoran
                                                                 Ji</h4>
                                                         <div>
-                                                            <p>Texas A&M U. Corpus Christi</p>
+                                                            <p>Texas A&M University-Corpus Christi</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
@@ -3617,7 +3617,7 @@
                                                                 href="https://kingsley1989.github.io/"
                                                                 target="_blank">Kaixun Hua</h4>
                                                         <div>
-                                                            <p>U. of South Florida</p>
+                                                            <p>University of South Florida</p>
                                                         </div></a>
                                                     </div>
                                                 </div>
