--- a/panels.html
+++ b/panels.html
@@ -1788,7 +1788,7 @@
 											<div class="header-content-container center">
 												<div class="header-content">
 
-													<h1 class="et_pb_module_header">panels
+													<h1 class="et_pb_module_header">Panels
 													</h1>
 
 													<div class="et_pb_header_content_wrapper"></div>
