--- a/index.html
+++ b/index.html
@@ -1995,6 +1995,8 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="panels.html" target="_blank">Panel</a> has been posted. </li>
+                                                        <li><a href="venue.html" target="_blank">Conference Hotel & Banquet Venue</a> have been posted. </li>
                                                         <li><a href="tutorials.html" target="_blank">Tutorial</a> has been posted. </li>
                                                         <li><a href="program.html" target="_blank">Program</a> has been posted. </li>
                                                         <li><a href="cffss.html" target="_blank">Call for ICDM Female Scholar/Student Award </a>has been posted. The nomination deadline is October 24th.</li>
