--- a/program.html
+++ b/program.html
@@ -2360,9 +2360,10 @@
       
     </tr>
     <tr>
-      <td class="time">8:20–9:00</td>
+      <td class="time">8:15–9:00</td>
       <td>Presidential Ballroom</td>
       <td><strong>Opening Ceremony</strong><br>
+        <strong>Honorary Conference Chair, Shashi Shekhar (U. of Minnesota) </strong><br>
         Conference Chairs: Chang-Tien Lu (Virginia Tech), Dimitrios Gunopulos (University of Athens)<br>
         PC Chairs: Wei Ding (U. of Massachusetts, Boston), Jilles Vreeken (CISPA Helmholtz Center)<br>
         Workflow Chair: Fusheng Wang (Stony Brook U)
@@ -2487,7 +2488,7 @@
     <tr>
       <td class="time">12:30–13:30</td>
       
-      <td colspan="2" style="text-align: center; vertical-align: middle;"><strong>Lunch(Presidential Ballroom)</strong></td>
+      <td colspan="2" style="text-align: center; vertical-align: middle;"><strong>Lunch(Presidential Ballroom)<br> Women in Science Mentoring Luncheon (Senate)</strong></td>
       <td></td>
     </tr>
     <tr>
@@ -3185,7 +3186,7 @@
       <td>Wenbin Zhang</td>
     </tr>
     <tr>
-      <td class="time">17:30–18:30</td>
+      <td class="time">17:40–18:30</td>
       <td>Presidential Ballroom</td>
       <td><strong>Closing Ceremony</strong><br>
         Conference Chairs: Chang-Tien Lu (Virginia Tech), <br>Dimitrios Gunopulos (University of Athens)<br>
