--- a/index.html
+++ b/index.html
@@ -1647,6 +1647,13 @@
                                             Tutorials
                                         </a>
                                     </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="PhD_forum.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            PhD forum
+                                        </a>
+                                    </li>
 									                  <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="acceptedpapers.html"
@@ -1995,6 +2002,7 @@
 
                                                     <h4><strong>Announcements</strong></h4>
                                                     <ul>
+                                                        <li><a href="PhD_forum.html" target="_blank">PhD forum</a> has been posted. </li>
                                                         <li><a href="panels.html" target="_blank">Panel</a> has been posted. </li>
                                                         <li><a href="venue.html" target="_blank">Conference Hotel & Banquet Venue</a> have been posted. </li>
                                                         <li><a href="tutorials.html" target="_blank">Tutorial</a> has been posted. </li>
