--- a/PhD_forum.html
+++ b/PhD_forum.html
@@ -1629,7 +1629,7 @@
                                         </a>
                                     </li>
 									 <li
-                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="panels.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Panels
@@ -1654,6 +1654,14 @@
                                         <a href="tutorials.html"
                                             style="display: block; min-width: 300px; padding: 10px 20px;">
                                             Tutorials
+                                        </a>
+                                    </li>
+									
+									<li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681 current-menu-item">
+                                        <a href="PhD_forum.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            PhD forum
                                         </a>
                                     </li>
 									<li
