--- a/keynotes.html
+++ b/keynotes.html
@@ -1653,6 +1653,13 @@
                                             Tutorials
                                         </a>
                                     </li>
+                                     <li
+                                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
+                                        <a href="PhD_forum.html"
+                                            style="display: block; min-width: 300px; padding: 10px 20px;">
+                                            PhD forum
+                                        </a>
+                                    </li>
 									                  <li
                                         class="menu-item menu-item-type-post_type menu-item-object-page menu-item-681">
                                         <a href="acceptedpapers.html"
