--- a/program.html
+++ b/program.html
@@ -3400,7 +3400,7 @@
 <tr>
   <td>DM241</td>
   <td>Improving Generalization Capabilities of Models Trained on Time Series Data Using Novel Downsampling Methods</td>
-  <td>Ofir Landau (Ben-Gurion University), Nir Nissim (Nir Nissim)</td>
+  <td>Ofir Landau (Ben-Gurion University), Nir Nissim (Ben-Gurion University)</td>
 </tr>
 <tr>
   <td>DM650</td>
