--- a/program.html
+++ b/program.html
@@ -2729,7 +2729,7 @@
     </tr>
      <tr>
       <td class="time">10:00–10:30</td>
-      <td colspan="3" style="text-align: center; vertical-align: middle;">Award Research Presentations<br><strong>Research Contributions Award, Dr. Zhi-Hua Zhou (Video Streaming) </strong><br><strong>10-year Impact Award,Dr. Ruining He</strong> <br> <strong>Tao Li Award, Dr. Jundong Li</strong><br> (Session Chairs: Chang-Tien Lu, Jilles Vreeken)<br> Location: Presidential Ballroom</td>
+      <td colspan="3" style="text-align: center; vertical-align: middle;">Award Research Presentations<br><strong>10-year Impact Award,Dr. Ruining He</strong> <br> <strong>Tao Li Award, Dr. Jundong Li</strong><br> (Session Chairs: Chang-Tien Lu, Jilles Vreeken)<br> Location: Presidential Ballroom</td>
     </tr>
     <tr>
       <td class="time">10:00–11:00</td>
@@ -3052,6 +3052,30 @@
       <td>California</td>
       <td>Tutorial 13: Computational Pathology Foundation Models: Datasets, Adaptation Strategies, and Evaluations</td>
       <td>Dong Li, Ninghui Hao, Xintao Wu, Guihong Wan, Chen Zhao</td>
+    </tr>
+    <tr>
+      <td class="time">10:30-12:30</td>
+      <td>New York</td>
+      <td>Backup Track S33</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td class="time">10:30-12:30</td>
+      <td>Massachusetts</td>
+      <td>Backup Track S34</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td class="time">10:30-12:30</td>
+      <td>Statler A</td>
+      <td>Backup Track S35 (Workshop)</td>
+      <td></td>
+    </tr>
+      <tr>
+      <td class="time">10:30-12:30</td>
+      <td>Statler B</td>
+      <td>Backup Track S36 (Workshop)</td>
+      <td></td>
     </tr>
     <tr>
       <td class="time">12:30–13:30</td>
