--- a/program.html
+++ b/program.html
@@ -2010,7 +2010,7 @@
   Main conf. regular: <strong>20 mins</strong> (17-minute talk + 3-min Q/A)<br>
   Main conf. short: <strong>15 minutes</strong> (12-min talk + 3-min Q/A)</p>
 
-  <p><strong>Registration: Tuesday, Nov. 11, 15:00-18:00 PM<br>
+  <p><strong>Registration Open: Wednesday, Nov. 12, 7:30AM<br>
   (Location: 2nd Floor Coatcheck)</strong></p>
 <br>
   <h3>Day 1: Wednesday, Nov. 12, 2025</h3>
@@ -2501,7 +2501,7 @@
     <tr>
       <td class="time">14:00–16:00</td>
       <td>South American B</td>
-      <td><strong>Main Conference Track S14</strong>: Graph Neural Networks</td>
+      <td><strong>Main Conference Track S14</strong>: Graph Neural Networks<br><strong>🏆Best Paper Runner-Up Award(1)</strong></td>
       <td>Lecheng Zheng</td>
     </tr>
     <tr>
@@ -2758,7 +2758,7 @@
     <tr>
       <td class="time">11:00–12:30</td>
       <td>Senate</td>
-      <td><strong>Main Conference Track S21</strong>: Graphs II</td>
+      <td><strong>Main Conference Track S21</strong>: Graphs II<br><strong>🏆Best Paper Award Presentation</strong></td>
       <td>Yi He</td>
     </tr>
     <tr>
@@ -2770,7 +2770,7 @@
     <tr>
       <td class="time">11:00–12:30</td>
       <td>Federal B</td>
-      <td><strong>Main Conference Track S23</strong>: Applications II</td>
+      <td><strong>Main Conference Track S23</strong>: Applications II<br><strong>🏆Best Student Paper Award</strong></td>
       <td>Xuechen Zhang</td>
     </tr>
     <tr>
@@ -3038,7 +3038,7 @@
     <tr>
       <td class="time">10:30–12:30</td>
       <td>Federal A</td>
-      <td><strong>Main Conference Track S31</strong>: Graphs & Learning</td>
+      <td><strong>Main Conference Track S31</strong>: Graphs & Learning<br><strong>🏆Best Student Paper Runner-Up Award</strong></td>
       <td>Liqing Zhang</td>
     </tr>
     <tr>
@@ -3213,7 +3213,7 @@
     <tr>
       <td class="time">16:00–17:30</td>
       <td>Statler B</td>
-      <td><strong>Main Conference Track S36</strong>: Trustworthiness</td>
+      <td><strong>Main Conference Track S36</strong>: Trustworthiness<br><strong>🏆Best Paper Runner-Up Award(2)</strong></td>
       <td>Wenbin Zhang</td>
     </tr>
     <tr>
@@ -3366,7 +3366,7 @@
     </tr>
     <tr>
       <td>DM526</td>
-      <td>Test-Time Graph Rebirth For GNN Generalization Under Distribution Shifts</td>
+      <td>Test-Time Graph Rebirth For GNN Generalization Under Distribution Shifts<br><strong> 🏆Best Paper Runner-Up Award(1)</strong></td>
       <td>Xin Zheng (Griffith University), Bo Li (Griffith University), Yu Zheng (Latrobe University), Qin Zhang (Shenzhen University), Haishuai Wang (Zhejiang University), The Hong Kong University of Science and Technology (Guangzhou), Alan Wee-Chung Liew (Griffith University), Shirui Pan (Griffith University)</td>
     </tr>
 
@@ -3502,7 +3502,7 @@
 </tr>
 <tr>
   <td>DM540</td>
-  <td>Attributed Hypergraph Generation with Realistic Interplay Between Structure and Attributes</td>
+  <td><strong>🏆Best Paper Award: </strong>Attributed Hypergraph Generation with Realistic Interplay Between Structure and Attributes</td>
   <td>Jaewan Chun (KAIST), Seokbum Yoon (KAIST), Minyoung Choe (KAIST), Geon Lee (KAIST), Kijung Shin (KAIST)</td>
 </tr>
 <tr>
@@ -3526,7 +3526,7 @@
 
 <tr>
   <td>DM316</td>
-  <td>HyHG: A Temporal Hypergraph Contrastive Learning Framework for Biomedical Hypothesis Generation</td>
+  <td>HyHG: A Temporal Hypergraph Contrastive Learning Framework for Biomedical Hypothesis Generation<br><strong> 🏆Best Student Paper Award</strong></td>
   <td>Amir Shariatmadari (University of Virginia), Sikun Guo (University of Virginia), Nathan Sheffield (University of Virginia), Aidong Zhang (University of Virginia), Kishlay Jha (University of Iowa)</td>
 </tr>
 <tr>
@@ -3672,7 +3672,7 @@
 </tr>
 <tr>
   <td>DM682</td>
-  <td>Zero-Shot Cross-City Trajectory Prediction Using Hypernetworks</td>
+  <td>Zero-Shot Cross-City Trajectory Prediction Using Hypernetworks<br><strong> 🏆Best Student Paper Runner-Up Award</strong></td>
   <td>Jonas Gunkel (German Aerospace Center), Andrea Tundis (German Aerospace Center), Max Mühlhäuser (Technical University of Darmstadt)</td>
 </tr>
 <tr>
@@ -3790,7 +3790,7 @@
 </tr>
 <tr>
   <td>DM489</td>
-  <td>DP-FedLoRA: Privacy-Enhanced Federated Fine-Tuning for On-Device Large Language Models</td>
+  <td>DP-FedLoRA: Privacy-Enhanced Federated Fine-Tuning for On-Device Large Language Models<br><strong> 🏆Best Paper Runner-Up Award(2)</strong></td>
   <td>Honghui Xu (Kennesaw State University), Shiva Shrestha (Kennesaw State University), Wei Chen (Nexa AI), Zhiyuan Li (Nexa AI), Zhipeng Cai (Georgia State University)</td>
 </tr>
 <tr>
