--- a/venue.html
+++ b/venue.html
@@ -1941,7 +1941,7 @@
   <li><strong>Route:</strong>
     <ol>
       <li>
-        Head east on K St NW toward 15th St NW walk to the K St &amp; 14th St NW WB (about 5 min, 0.2 mi)
+        Head east on K St NW toward 15th St NW and walk to the K St &amp; 14th St NW WB (about 5 min, 0.2 mi)
       </li>
       <li>
         Bus: Take Bus D50 (Waterfront)
