--- a/panels.html
+++ b/panels.html
@@ -1831,6 +1831,34 @@
 
 
 												<div class="et_pb_text_inner">
+
+
+													<h2 style="font-weight: bold; display: inline-block;">ICDM 2025 Planetary Panel</h1>
+<p><h4>Title: LLMs Ate My Dataset: Is Data Mining Dead or Just Reborn?</h4></p>
+<p><strong>Moderator:</strong> Wei Ding (University of Massachusetts Boston)</p>
+<p><strong>Panelists</strong> (sorted alphabetically by <strong>first name</strong>): </p>
+
+
+<ul>
+  <li><strong>Aidong Zhang</strong> (University of Virginia, USA)</li>
+  <li><strong>Jilles Vreeken</strong> (CISPA Helmholtz Center for Information Security, Germany)</li>
+  <li><strong>John Quackenbush</strong> (Harvard University / Dana-Farber Cancer Institute, USA)</li>
+  <li><strong>Jure Leskovec</strong> (Stanford University, USA)</li>
+  <li><strong>Shashi Shekhar</strong> (University of Minnesota, USA)</li>
+</ul>
+
+<p><strong>Date:</strong> Friday, November 14, 2025</p>
+<p><strong>Time:</strong> 4:00 – 5:30 PM (after the coffee break and before the conference banquet)</p>
+<p><strong>Location:</strong> Presidential Ballroom</p>
+
+<p><strong>Panel Overview</strong></p>
+<p>Large Language Models (LLMs) are not just using data—they’re transforming it. Once, data miners uncovered hidden patterns in massive datasets; now, foundation models are pre-trained on those very patterns, abstracting them into parameters we can’t see. Are we witnessing the death of data mining—or its rebirth in a new form?<br>This flagship ICDM 2025 Planetary Panel explores how data mining’s theoretical, scientific, and infrastructural roots evolve in the era of generative AI. Through lively discussion, we’ll ask whether the core identity of data mining—pattern discovery, interpretability, causality—can survive when models themselves become the miners.</p>
+
+
+
+
+
+
 				                    <h2 style="font-weight: bold; display: inline-block;">Panel A: The Future of Probabilistic Modeling in Data Mining and AI</h1>
 <p><strong>Date and Time:</strong> November 13, 2025, 10:30-12:00      <strong>Location:</strong> Presidential Ballroom</p>
 <p><strong>Moderator:</strong> Dr. Farhad Pourkamali, University of Colorado Denver</p>
