--- a/panels.html
+++ b/panels.html
@@ -1833,7 +1833,7 @@
 												<div class="et_pb_text_inner">
 
 
-													<h2 style="font-weight: bold; display: inline-block;">ICDM 2025 Planetary Panel</h1>
+													<h2 style="font-weight: bold; display: inline-block;">ICDM 2025 Plenary Panel</h1>
 <p><h4>Title: LLMs Ate My Dataset: Is Data Mining Dead or Just Reborn?</h4></p>
 <p><strong>Moderator:</strong> Wei Ding (University of Massachusetts Boston)</p>
 <p><strong>Panelists</strong> (sorted alphabetically by <strong>first name</strong>): </p>
