--- a/program.html
+++ b/program.html
@@ -3003,11 +3003,11 @@
     </tr>
     <tr>
       <td class="time">9:00–10:00</td>
-      <td>Regency Ballroom</td>
+      <td>Presidential Ballroom</td>
       <td colspan="3" style="text-align: center; vertical-align: middle;"><strong>Keynote Speech III<br>
         Dr. Jure Leskovec, Stanford University, USA<br>
         Relational Foundation Models: A New Frontier for Predictive AI in Structured Data</strong><br>
-        Location: Regency Ballroom
+        Location: Presidential Ballroom
         
       </td>
       
